--- a/FlickrPickr/Base.lproj/Main.storyboard
+++ b/FlickrPickr/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="FlickrPickr" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,8 +16,44 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Knr-XC-PkT">
+                                <rect key="frame" x="16" y="0.0" width="568" height="432"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TBq-Wl-21Y">
+                                <rect key="frame" x="226" y="457" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="xTs-b1-xOj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="webSearch" returnKeyType="search"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vqq-vy-AJ6">
+                                <rect key="frame" x="278" y="513" width="48" height="30"/>
+                                <state key="normal" title="Search">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="searchClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="BBL-7a-MKk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TBq-Wl-21Y" firstAttribute="centerX" secondItem="vqq-vy-AJ6" secondAttribute="centerX" constant="-1" id="Fib-cE-YYd"/>
+                            <constraint firstItem="TBq-Wl-21Y" firstAttribute="top" secondItem="Knr-XC-PkT" secondAttribute="bottom" constant="25" id="NnI-Ux-jNZ"/>
+                            <constraint firstItem="Knr-XC-PkT" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="QBi-FF-moE"/>
+                            <constraint firstItem="TBq-Wl-21Y" firstAttribute="centerX" secondItem="Knr-XC-PkT" secondAttribute="centerX" constant="0.5" id="Uye-iV-FD7"/>
+                            <constraint firstItem="vqq-vy-AJ6" firstAttribute="top" secondItem="TBq-Wl-21Y" secondAttribute="bottom" constant="26" id="aWL-Py-1CD"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Knr-XC-PkT" secondAttribute="bottom" constant="168" id="gJ7-1W-B6G"/>
+                            <constraint firstItem="Knr-XC-PkT" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="p4J-Fb-Hdm"/>
+                            <constraint firstItem="Knr-XC-PkT" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="s83-6O-a5A"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="Knr-XC-PkT" id="Jba-AW-6Qu"/>
+                        <outlet property="searchTextField" destination="TBq-Wl-21Y" id="Nuk-eR-OvA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
